k8s/travel-demo/agency/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: travel-agency
  labels:
    # istio.io/dataplane-mode: ambient
